Fix more various styles on mobile

--- a/examples/solidjs-live-avatars/src/App.module.css
+++ b/examples/solidjs-live-avatars/src/App.module.css
@@ -21,6 +21,6 @@
   color: white;
 }
 
-.you {
+.you:not(:first-child) {
   margin-left: 32px;
 }
